2008-10-20  Tobias Schlüter  <tobi@gcc.gnu.org>

	* doc/install.texi: Fix typos in previous patch.

2008-10-19  Tobias Schlüter  <tobi@gcc.gnu.org>

	* doc/install.texi: Document in-tree building of gcc and mpfr.

2008-10-19  Richard Guenther  <rguenther@suse.de>

	* tree-ssa-alias.c (may_alias_p): Remove bogus shortcut.

2008-10-19  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR c/30260
	* c-decl.c (finish_enum): Convert non-integer enumerators to enum
	type.
	(build_enumerator): Convert enumerators that fit in integer to
	integer type.

2008-10-18  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (unnamed peephole2): Do not force memory
	operands of arith or logical instructions into registers for
	non-TARGET_READ_MODIFY targets.

	(ffs_cmove): Change operand 0 predicate to register_operand.
	Change operand 1 predicate to nonimmediate_operand.
	(ffsdi2): Ditto.
	(*ffs_no_cmove): Change operand 0 predicate to register_operand.

2008-10-18  Richard Guenther  <rguenther@suse.de>

	* tree-ssa-forwprop.c (forward_propagate_addr_expr_1): Guard
	VIEW_CONVERT_EXPR case against invalid gimple.

2008-10-17  Andreas Krebbel  <krebbel1@de.ibm.com>

	* c-parser.c (c_parser_binary_expression): Silence the
	uninitialized variable warning emitted for binary_loc.

2008-10-16  Daniel Berlin  <dberlin@dberlin.org>

	* tree-ssa-pre.c (phi_translate_set): Add constants to phi
	translation cache.

2008-10-16  Joseph Myers  <joseph@codesourcery.com>

	PR c/33192
	* c-typeck.c (build_unary_op): Use omit_one_operand for
	IMAGPART_EXPR of real argument.

2008-10-16  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/37664
	* fold-const.c (fold_binary): When optimizing comparison with
	highest or lowest type's value, don't consider TREE_OVERFLOW.

2008-10-16  David Edelsohn  <edelsohn@gnu.org>

	PR target/35483
	* Makefile.in (coverage.o): Depend on $(TM_P_H).
	* coverage.c: Include tm_p.h.
	* config/rs6000/x-aix (jc1): Override LDFLAGS.