@@ -1,3 +1,8 @@
+2008-10-20  Daniel Berlin  <dberlin@dberlin.org>
+
+	* tree-ssa-pre.c (insert_into_preds_of_block): Don't rewrite constant
+	part of expression.
+
 2008-10-20  Tobias Schlüter  <tobi@gcc.gnu.org>
 
 	* doc/install.texi: Fix typos in previous patch.
